# langchain-academy-using-oss-models

./: README.md  inference-engines.md  uv-commands.md  uv.md
quickstart-langchain-essentials/: L1_fast_agent.ipynb  L2_messages.ipynb  L3_streaming.ipynb  L4_tools.ipynb  L5_tools_with_mcp.ipynb  L6_memory.ipynb  L7_structuredOutput.ipynb  L8_dynamic.ipynb  L9_HITL.ipynb  README.md  main.py  pyproject.toml  requirements.txt
quickstart-langgraph-essentials/: main.py  pyproject.toml
