[project]
name = "quickstart-langchain-essentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.4.0",
]
